--- a/roma/package.json
+++ b/roma/package.json
@@ -38,6 +38,7 @@
     "lint-staged": "^10.5.4",
     "postcss": "^8.2.6",
     "postcss-cli": "^8.3.1",
+    "postcss-nesting": "^7.0.1",
     "prettier": "^2.2.1",
     "snowpack": "^3.0.11",
     "svelte": "^3.32.3",
